--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -515,12 +515,19 @@ FEU_capital_arms_workshops_central_asia_desc:0 "Our nation doesn't have the capa
 FEU_foreign_industrial_tech:0 "Foreign Industrial Machinery"
 
 FEU_the_adjective_armed_forces:0 "The [ROOT.GetAdjective] Armed Forces"
+FEU_the_adjective_armed_forces_desc:0 "The [ROOT.GetAdjective] Armed Forces are in need of massive reform and modernisation. We will need to expand the size and strength of our army if we want to remain a soverign nation in this rapidly changing world."
 FEU_warrior_tradition:0 "Warrior Tradition"
+FEU_warrior_tradition_desc:0 "Over the centuries the [ROOT.GetAdjective] nation has fought bravely in battle. Now should be no different, and we should fight like our ancestors did."
 FEU_strengthen_the_irregulars:0 "Strengthen the Irregulars"
+FEU_strengthen_the_irregulars_desc:0 "The [ROOT.GetAdjective] irregulars are crucial to our army as they make up most of it. We must strengthen these forces to prepare them for any sort of fighting to come."
 FEU_every_man_a_warrior:0 "Every Man a Warrior"
+FEU_every_man_a_warrior_desc:0 "To protect our nation, every man in the country must be ready to protect it. Every man will be trained like a warrior, ready to defend the nation."
 FEU_reform_the_conscription:0 "Extend the Conscription System"
+FEU_reform_the_conscription_desc:0 "We are in a need of more manpower for our army. We must extend the conscription system so we can conscript more people into our army and ready them."
 FEU_names_finest:0 "[ROOT.GetAdjective] Cavalry"
+FEU_names_finest_desc:0 "Cavalry is very useful as with it we can move quickly. We should expand the use of cavalry in the army as their own seperate units to utilise this strength. "
 FEU_utilize_our_strengths:0 "Use Everything We Have"
+FEU_utilize_our_strengths_desc:0 "To protect ourselves, we must use everything we have. We need to do everything to keep ourselves strong and protected from any invaders."
 FEU_fortify_capital:0 "Fortify [ROOT.Capital.GetCapitalVictoryPointName]"
 FEU_establish_military_academy:0 "Establish the [ROOT.GetAdjective] Military Acedamy"
 FEU_smuggle_arms:0 "Smuggle Arms"
