jabal shammar def

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2541,7 +2541,7 @@
  JBS_democratic:0 "Jabal Shammar"
  JBS_fascism:0 "Jabal Shammar"
  JBS_communism:0 "Ha'il Commune"
- JBS_neutrality_DEF:0 "Jabal Shammar"
+ JBS_neutrality_DEF:0 "the Emirate of Jabal Shammar"
  JBS_democratic_DEF:0 "Jabal Shammar"
  JBS_fascism_DEF:0 "Jabal Shammar"
  JBS_communism_DEF:0 "the Ha'il Commune"
