VLN_communism_ADJ:0 "Anarchist"

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2505,7 +2505,7 @@
  VLN_neutrality_DEF:0 "the Zaporozhian Sich"
  VLN_communism:0 "Free Territory"
  VLN_communism_DEF:0 "the Free Territory"
- VLN_communism_ADJ:0 "Volnaya"
+ VLN_communism_ADJ:0 "Anarchist"
  ASR:0 "Asir"
  ASR_DEF:0 "Asir"
  ASR_ADJ:0 "Asiri"
