--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2499,8 +2499,8 @@
  VLN_ADJ:0 "Zaporozhian"
  VLN_fascism:0 "State of Zaporizhzhia"
  VLN_fascism_DEF:0 "the State of Zaporizhzhia"
- VLN_democratic:0 "Zaporozhian Cossack Republic"
- VLN_democratic_DEF:0 "the Zaporozhian Cossack Republic"
+ VLN_democratic:0 "Priazov-Donets Republic"
+ VLN_democratic_DEF:0 "the Priazov-Donets Republic"
  VLN_neutrality:0 "Zaporozhian Sich"
  VLN_neutrality_DEF:0 "the Zaporozhian Sich"
  VLN_communism:0 "Free Territory"
