central asian stuff

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -458,6 +458,7 @@ FEU_def_country_name:0 "[ROOT.GetNameDefCap]"
 FEU_secure_internal_politics:0 "Secure Internal Politics"
 FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Authority"
 FEU_strengthen_feudalism:0 "Strengthen the Feudal System"
+FEU_strenthen_autocracy:0 "Strengthen the Autocracy"
 
 FEU_per_secure_our_independence:0 "Secure our Independence"
 FEU_american_mission:0 "American Mission"
@@ -496,7 +497,7 @@ FEU_fight_china:0 "Fight China"
 FEU_great_mongolia_idea:0 "Greater Mongolia Idea"
 
 FEU_loyalty_to_russia:0 "Loyalty to the Tsar"
-FEU_loyalty_to_russia_desc:0 "To strengthen the position of our nation, we must be loyal to our master, the Russian Empire. We can ask for their help in strengthening and developing our nation so we can be loyal to the empire."
+FEU_loyalty_to_russia_desc:0 "To strengthen the position of our nation, we must be loyal to our overlord, the Russian Empire and the Tsar. We can ask for their help in strengthening and developing our nation so we can be loyal to the empire."
 FEU_russian_army_techniques:0 "Russian Army Tactics"
 FEU_russian_army_techniques_desc:0 "Russia is one of the great powers in the world and has one of the, if not the largest army. They have advanced knowledge in the field of warfare and we can ask for their knowledge and tactics to strengthen our military too."
 FEU_import_russian_weapons:0 "Import Russian Weapons"
