--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1875,7 +1875,7 @@
 
  RWL_neutrality_party:0 "Al Sha'lan"
 
- AMR_neutrality_party:0 "Amarat Tribe"
+ AMR_neutrality_party:0 "'Amārāt"
 
  KLT_neutrality_party:0 "Brahui Ahmadzai Dynasty"
 
