Loc for BUL-TUR negotiations

--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -247,6 +247,7 @@ ww1_BUL_TUR.5.b:0 "Concerns about Upcoming Mufti Elections"
 ww1_BUL_TUR.5.c:0 "End the negotiations"
 ww1_BUL_TUR.5.dd:0 "We’ve made all our points"
 ww1_BUL_TUR.5.e:0 "Border Conflicts"
+ww1_BUL_TUR.5.f:0 "Crickets"
 
 ww1_BUL_TUR.6.t:0 "Conscription of Ottoman Citizens in Bulgaria"
 ww1_BUL_TUR.6.d:0 "The Ottoman delegation strongly opposes the conscription of Ottoman citizens into the Bulgarian military."
@@ -342,11 +343,12 @@ ww1_BUL_TUR.26.dd:0 "Push for a Macedonian Autonomous State"
 ww1_BUL_TUR.26.e:0 "Cease Negotiations"
 ww1_BUL_TUR.26.f:0 "We’ve Made All Our Points"
 ww1_BUL_TUR.26.g:0 "Push For The Renewal of a Trade Arrangment"
+ww1_BUL_TUR.26.h:0 "Push For Minor Border Conssecions   §RThis could be dangerous!§"
 
 ww1_BUL_TUR.27.t:0 "The Border Refugee Problem"
 ww1_BUL_TUR.27.d:0 "The ongoing refugee crisis along the border presents significant challenges for both nations. What should be our solution for this issue?"
 ww1_BUL_TUR.27.a:0 "Propose Economic Incentives"
-ww1_BUL_TUR.27.b:0 "Given the circumstance, they will have to stay; if they must be convinced by bayonet point, so be it."
+ww1_BUL_TUR.27.b:0 "They will have to stay; if they must be convinced by bayonet point, so be it."
 
 ww1_BUL_TUR.28.t:0 "Concerns Shared by Ivan Geshov:Border Refugee Problem, He Proposes Economic Incentives"
 ww1_BUL_TUR.28.d:0 "Ivan Geshov brings up the pressing issue of refugees crossing the border and suggests the use of economic incentives to address the situation."
@@ -439,6 +441,7 @@ ww1_BUL_TUR.46.a:0 "Ok...?"
 
 ww1_BUL_TUR.47.t:0 "The Ottomans Agree to an Autonomous Macedonia"
 ww1_BUL_TUR.47.d:0 "The Ottoman Empire has shockingly agreed to recognize an autonomous Macedonia. This agreement marks a potential turning point in our relations, and may pave the way for further cooperation in the region."
+ww1_BUL_TUR.47.a:0 "How Fortuitous!"
 
 ww1_BUL_TUR.48.t:0 "Concerns of the Young Turk's 'Ottomanization'"
 ww1_BUL_TUR.48.d:0 "The Young Turks' policies of 'Ottomanization' have raised concerns among our leadership. We must address these issues."
@@ -532,6 +535,31 @@ ww1_BUL_TUR.69.t:0 "Grand Mufti Elections"
 ww1_BUL_TUR.69.d:0 "The Grand Mufti is the highest religious authority within Sunni Islam in a given country or region, overseeing Islamic legal and theological matters. Due to our high muslim populance this is a very important election; now even more emphasized by the Ottoman Empire's wishes to see Suleyman Rusdi, current mufti of Vividin, come to power. They fear that if Hocazade Mehmet Muhiddin Efendi continues his reign in just a few decades all Muslims in Thrace and Macedonia will cease to exist."
 ww1_BUL_TUR.69.a:0 "Hocazade Mehmet Muhiddin Efendi §OThis is the historical choice.§!"
 ww1_BUL_TUR.69.b:0 "Suleyman Rusdi"
+
+ww1_BUL_TUR.70.t:0 "Call Asim Bey back to Konstaniniyye?"
+ww1_BUL_TUR.70.d:0 "We could utilize Asim Bey's skills elsewhere, such as Foreign Minister. His aid, Nabey Bey, is more than suitable to replace Asim Bey and continue with the negotiations with Ivan Geshov."
+ww1_BUL_TUR.70.a:0 "Yes"
+ww1_BUL_TUR.70.b:0 "No, He Stays"
+
+ww1_BUL_TUR.71.t:0 "Asim Bey is called back to Constantinople"
+ww1_BUL_TUR.71.d:0 "The Young Turks have decided to call Asim Bey back to the Sublime Porte, for he is assuming the role of Foreign Minister. His aid who we have dealt with prior, Nabey Bey, will continue the negotiations."
+ww1_BUL_TUR.71.a:0 "Will This Affect the Negotiation Proccess?"
+
+ww1_BUL_TUR.72.t:0 "Crickets from Nabey Bey"
+ww1_BUL_TUR.72.d:0 "Ever since Nabey Bey has assumed the position of negotiator on behalf of the Young Turks the discussions have stalled...... the once promising agreement has become stillborn in the words of Geshov."
+ww1_BUL_TUR.72.a:0 "What's Happening?"
+ww1_BUL_TUR.72.b:0 "Enough is Enough!"
+
+ww1_BUL_TUR.73.t:0 "Bulgaria Requests A Minor Border Concession"
+ww1_BUL_TUR.73.d:0 "Ivan Geshov has asked for a minor border concession to further fulfill the safety of not only Christians, but muslims alike...... it's quite a risky move..."
+ww1_BUL_TUR.73.a:0 "Offer Tarnovacik for a Non-Agression Pact"
+ww1_BUL_TUR.73.b:0 "Not A Chance"
+ww1_BUL_TUR.73.c:0 "Madness!"
+
+ww1_BUL_TUR.74.t:0 "The Young Turks offer Tarnovacik for a Non-Agression Pact"
+ww1_BUL_TUR.74.d:0 "In response to our humble and worthy request the Porte has found that such an exchange is favorable to all parties involved... How do we respond?"
+ww1_BUL_TUR.74.a:0 "Deal"
+ww1_BUL_TUR.74.b:0 "No Deal"
 
  ###Ideas Loc###
  #BULGARIA
