--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -1182,6 +1182,10 @@ ROM_king_government:0 "The government is led by the §qKing§! "
 ROM_pnl_bad:0 "§Rorganized§! in complete §Ropposition§! to §YCarp§!"
 ROM_pnl_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
 ROM_pcd_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
+ROM_pnl_good:0 "§Gcriminalized§!, with their protests being §Gviolently repressed§!"
+ROM_pcd_good:0 "§Gcriminalized§!, with their protests being §Gviolently repressed§!"
+ROM_trumpism:0 "Both the §lPNL§! and §mPCD§! will become §Gcriminalized§!, with their protests being §Gviolently repressed§!"
+
 ROM_pcd_bad:0 "§Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!"
 ROM_peasants_bad:0 "generally apathetic, neither standing in §Gsupport§! or §Ropposition§!"
 ROM_peasants_ally:0 "§Gsupportive§! of §YCarp§!"
