--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -562,6 +562,7 @@ ROM_ban_the_pnl_and_pcd:0 "Ban the PNL and the PCD"
 ROM_handle_the_radical_lunatics:0 "Handle the Radical Lunatics"
 ROM_dismiss_parliament:0 "Dismiss Parliament"
 ROM_the_enemy_from_within:0 "The Enemy from Within"
+ROM_the_enemy_from_within_desc:0 "There are some very bad people within our country, who'd like to have our country be a communist dictatorship. They may pretend to be moderate liberals, but they're the greatest con artists. These sick puppies need to be stopped. It should be handled by the Royal Guard, or even by the military if needed."
 ROM_romanian_mountaineer_corps:0 "Vânatori de Munte"
 ROM_romanian_mountaineer_corps_desc:0 "It's time to establish a fighting force that can fight adaptably in the lands to our west. The Vânatori de Munte will be that fighting force to defend us in the mountain ranges."
 
@@ -764,6 +765,7 @@ ww1_romania.28.b:0 "The liberation of Moldova awaits!"
 ww1_romania.79.t:0 "National Opposition Organizes"
 ww1_romania.79.d:0 "Do later"
 ww1_romania.79.a:0 " "
+ROM_national_opposition_organizes:0 "Add §Y'National Opposition'§! which grants:\nPolitical Power gain: §R-50%§!\nStability: §R-40.00%§!"
 ww1_romania.80.t:0 "The Carp Constitution"
 ww1_romania.1.d:0 "The Romanian constitution of 1866 has often been praised as one of the most modern constitutions in the world at the time, with separation of powers, an abolished death penalty, guaranteed private property, freedom of speech, and total freedom of the press. However, the Romanian constitution has changed very little since then, and thus Romania has fallen from one of the most democratic countries at its time, to the flawed constitutional monarchy it is now.\n\nWhether this is a positive or negative development for Romania is debatable, but one thing can be agreed upon by everyone: King Carol's influence on the Romanian political system is immense, and has grown in recent times. King Carol has often simply rotated between forming a government with the liberal PNL, and the conservative PC, as well as the recently formed moderate PCD. This has lead to little actual reform in Romania, as opposing political parties overturn much of the reforms the last government passed. This culminated in a revolt by angry peasants in 1907, angered by the little reform passed by any government. Thus, King Carol has taken a new course, appointing a liberal government that has governed the country for the last 3 years straight, passing a suprisingly large amount of reforms as of recent, which has kept the peasants in line for now.\n\nWith the 1911 elections approaching, King Carols confidence in the liberals and their ability to govern has declined. Seeing it as time for a new party to get a chance to rule Romania, King Carol has been flirting with the idea of appoiting a conservative government, or at least supporting the conservatives in the elections."
 ww1_romania.1.a:0 "The King is a very wise man"
