--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3007,11 +3007,11 @@
  JKS_communism_DEF:0 "the Free People's Republic of Jammu and Kashmir"
 
  RWL:0 "Ruwallah"
- RWL_DEF:0 "Ruwallah"
+ RWL_DEF:0 "the Emirate of Ruwallah"
  RWL_ADJ:0 "Ruwallah"
 
  AMR:0 "Amarat"
- AMR_DEF:0 "Amarat"
+ AMR_DEF:0 "the Sheikhdom of Amarat"
  AMR_ADJ:0 "Amarat"
 
  KLT:0 "Kalat"
