--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -630,6 +630,9 @@ ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n£construction_speed_milfac
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n£construction_speed_milfactory_texticon §YMilitary Factory§! construction speed: §G+15.00%§!\n£stability_texticon Stability: §R-10.00%§!"
 ROM_mifocus:0 "Modify §YRomanian Economy§! by\n£stability_texticon Stability: §G+5.00%§!\n£efficiency_growth_texticon Production Efficiency growth: §G+5.00%§!"
 ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£efficiency_growth_texticon Production Efficiency growth: §G+5.00%§!"
+
+ROM_m23focus:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£efficiency_growth_texticon Production Efficiency growth: §R-5.00%§!\nStability: §G+5.00%§!"
+
 ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_talk_tuah.tt:0 "Modify §YRomanian Economy§! by\nConsumer Goods Factories factor: §Y-10.0%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£factory_output_texticon Factory Output: §G+5.00%§!"
