--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -566,7 +566,7 @@ ROM_the_enemy_from_within_desc:0 "There are some very bad people within our coun
 ROM_romanian_mountaineer_corps:0 "Vânatori de Munte"
 ROM_romanian_mountaineer_corps_desc:0 "It's time to establish a fighting force that can fight adaptably in the lands to our west. The Vânatori de Munte will be that fighting force to defend us in the mountain ranges."
 ROM_concessions_to_the_crown_council:0 "Concessions to the Consiliul de Coroana"
-ROM_invite_carp_jews:0 "Invite Carpist Jews"
+ROM_invite_carp_jews:0 "Tackle Antisemitism"
 ROM_unity_of_the_nation:0 "Unity of the Nation"
 ROM_reduce_import_tariffs:0 "Reduce Import Tariffs"
 
