--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -29,7 +29,7 @@ ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
 ROM_invite_fredrick_wilhelm_as_king:0 "Invite Friedrich Wilhelm as King"
 ROM_sway_intellectuals:0 "Sway Intellectuals"
 ww1_romania.109.t:0 "[ROOT.GetLeader] Forced to Resign"
-ww1_romania.109.d:0 "With the war developing poorly for us, [ROOT.GetLeader] has seen a collapse in support as of recent. With this, he's been forced to resign, and the King has decided to replace him with someone who would help smooth over peace negotiations between Romania and its enemies."
+ww1_romania.109.d:0 "With his popularity collapsing as a result of being forced to sign an armistice with Austria, [ROOT.GetLeader] has seen a collapse in support as of recent. With this, he's been forced to resign, and the King has decided to replace him with someone who would help smooth over offical peace negotiations between Romania and its enemies."
 ww1_romania.109.a:0 "Let's wish him well"
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\n£boost_popularity_texticon Change in popularity of Democracy: §G+15.00%§!\n£political_power_texticon Political Power: §G+50§!.\n£stability_texticon Gain Base Stability: §G+5.00%§!.\n\n"
 ROM_help1:0 "If we reach §Y90%§! surrender progress, §YPetre Carp§! will coup our government!"
