--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -31,8 +31,10 @@ ROM_sway_intellectuals:0 "Sway Intellectuals"
 ww1_romania.109.t:0 "[ROOT.GetLeader] Forced to Resign"
 ww1_romania.109.d:0 "With his popularity collapsing as a result of being forced to sign an armistice with Austria, [ROOT.GetLeader] has seen a collapse in support as of recent. With this, he's been forced to resign, and the King has decided to replace him with someone who would help smooth over offical peace negotiations between Romania and its enemies."
 ww1_romania.109.a:0 "Let's wish him well"
+ROM_treaty_of_bucharest:0 "Treaty of Bucharest"
+ROM_carp_collaborationist_governmenmt:0 "Germany Sets up Carp Collaborationist Government"
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\n£boost_popularity_texticon Change in popularity of Democracy: §G+15.00%§!\n£political_power_texticon Political Power: §G+50§!.\n£stability_texticon Gain Base Stability: §G+5.00%§!.\n\n"
-ROM_help1:0 "If we reach §Y90%§! surrender progress, §YPetre Carp§! will coup our government!"
+ROM_help1:0 "If we reach do not sign a peace treaty with [GER.GetFlag]§YGermany§! in time, §YPetre Carp§! will form a pro German rival government."
 ROM_entrench_the_aristocracy:0 "Entrench the Aristocracy"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
