--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -20,6 +20,7 @@ ROM_advancements_in_plane_technology_desc:0 "We need to adapt [ROM.GetNameDef] t
 ROM_domestic_air_manufactor:0 "Cerchez and Co"
 ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government purchases them we might just be able to build ourself an airforce all by ourselves."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
+ROM_lupu_kostaki:0 "Lupu Kostaki"
 ROM_the_southern_wall:0 "The Southern Wall"
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
 ROM_complete_the_defense_of_the_southern_carpathians:0 "Increase Defenses in the Southern Carpathians"
