--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -23,6 +23,17 @@
  multifaceted_old_hand:0 "Multifaceted Old-Hand"
  serbo_bulgarian_defence_agreement:0 "Serbo-Bulgarian Defense Agreement"
 
+## Characters ##
+
+BUL_vasil_radoslavov_desc:0 "Born in Lovech, Radoslavov pursued his studies in law at Heidelberg, where he developed a keen interest in German culture and ideals. Politically active since 1884, he was successively appointed to a number of roles, including Minister of Justice, Prime Minister, Minister of Finance, Minister of Internal Affairs, Minister of Justice once more, Minister of National Enlightenment, and Minister of Internal Affairs once more. Radoslavov holds the distinction of being the youngest person to have ever served as Prime Minister of Bulgaria at 32 years old. However, his tenure was marred by allegations of corruption, which ultimately led to his trial by the State Court on charges of high treason. Despite the eight-month imprisonment and debarment of civil and political rights that he received, he was granted amnesty by the Stambolovists."
+
+## Character Traits ##
+
+democratic_stabilizer:0 "Democratic Stabilizer"
+accomplished_humanitarian:0 "Accomplished Humanitarian"
+right_wing_liberal:0 "Right-Wing Liberal"
+liberal_russophile:0 "Liberal Russophile"
+
 ## Decisions ##
 
 BUL_allow_free_press_dec:0 "Allow Free Press"
