--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -478,3 +478,4 @@
  cossack_ataman:0 "Cossack Ataman"
  cossack_warlord:0 "Cossack Warlord"
  zemstvo_influencer:0 "Zemstvo Influencer"
+ silent_cal:0 "Silent Cal"
