add new candidate characters

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3819,6 +3819,9 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  USA_herbert_hoover:0 "Herbert Hoover"
  USA_calvin_coolidge:0 "Calvin Coolidge"
  USA_al_smith:0 "Al Smith"
+ USA_thomas_r_marshall:0 "Thomas R. Marhsall"
+ USA_robert_m_la_follette:0 "Robert M. La Follette"
+ USA_john_w_davis:0 "John W. Davis"
  
  # VENEZUELA
  VEN_juan_vicente_gomez:0 "Juan Vicente Gómez"
