--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3823,6 +3823,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  USA_robert_m_la_follette:0 "Robert M. La Follette"
  USA_john_w_davis:0 "John W. Davis"
  USA_champ_clark:0 "Champ Clark"
+ USA_eugene_w_chafin:0 "Eugene W. Chafin"
  
  # VENEZUELA
  VEN_juan_vicente_gomez:0 "Juan Vicente Gómez"
