davis and hughes re-elections

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -7138,8 +7138,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_usa.153.a:0 "America Mourns"
  ww1_usa.154.t:0 "Presidential Election of 1920"
  ww1_usa.154.d:0 "The United States stands at a crossroads. After the turmoil of World War I and a wave of social upheaval, the nation is split between two visions for the future. Republican Warren G. Harding promises a "Return to Normalcy" - a retreat from international entanglements and a focus on conservative economic policies to stabilize the nation. His opponent, Democrat James M. Cox, champions progressive reforms and a commitment to the League of Nations, warning that America must embrace its role on the world stage. With voters fatigued by war and change, the future will be changed by either president."
- ww1_usa.154.a:0 "The Democrats. We need to continue progresive reforms!"
- ww1_usa.154.b:0 "The Republicans. We need a return to normalcy!"
+ ww1_usa.154.a:0 "The Democrats! We need to continue progresive reforms!"
+ ww1_usa.154.b:0 "The Republicans! We need a return to normalcy!"
+ ww1_usa.154.c:0 "The Republicans! We must stay united!"
  ww1_usa.155.t:0 "Warren G. Harding Elected President!"
  ww1_usa.155.d:0 "In a landslide victory, Republican candidate Warren G. Harding has been elected as the 29th President of the United States, defeating Democrat James M. Cox. Running on a promise of a "Return to Normalcy," Harding's campaign struck a chord with Americans weary from war and social unrest. His message of stability, pro-business policies, and a retreat from global entanglements resonated strongly, securing overwhelming support across the country. Harding's win signals a shift towards conservatism, with the U.S. set to embrace isolationism and focus on rebuilding at home after years of progressive reforms and international commitments."
  ww1_usa.155.a:0 "A Return to Normalcy"
@@ -7164,6 +7165,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_usa.161.t:0 "Presidential Election of 1928"
  ww1_usa.161.d:0 "As the nation gears up for the 1928 presidential election, the political landscape is charged with anticipation. Republican candidate Herbert Hoover, the former Secretary of Commerce, campaigns on a platform of economic prosperity, emphasizing his belief in individualism and the power of business to drive the nation forward. Meanwhile, Democratic candidate Al Smith, the Governor of New York, presents a progressive agenda advocating for social reforms, labor rights, and the repeal of Prohibition. The election highlights the stark divide between urban interests and rural values, as Smith represents the urban electorate and immigrant communities, while Hoover appeals to conservatives. With both candidates passionate about their visions for America, the nation stands ready to make a pivotal choice."
  ww1_usa.161.a:0 "The Democrats! We need to return democrat progressivism!"
+ ww1_usa.161.e:0 "The Democrats! Four more year of conservatism!"
  ww1_usa.161.b:0 "The Republicans! We need to continue economic growth!"
  ww1_usa.161.c:0 "The Progressives! Four more years of reform!"
  ww1_usa.162.t:0 "Al Smith Elected President!"
@@ -7194,6 +7196,12 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_usa.170.t:0 "James M. Cox Re-Elected as President!"
  ww1_usa.170.d:0 "President James M. Cox has been reelected to a second term, defeating the Republican Challenger in the 1924 election. Cox's first term focused on progressive reforms, including labor protections, infrastructure development, and support for education, which have resonated with voters nationwide. His administration's emphasis on social welfare and economic modernization has solidified his support, especially among urban workers and rural communities seeking government assistance. With this victory, Cox is expected to continue advancing his progressive agenda, focusing on improving workers' rights, expanding social programs, and stabilizing the economy. As he enters his second term, the nation prepares for another four years of ambitious reforms aimed at building a fairer, more prosperous America."
  ww1_usa.170.a:0 "The Progressive Agenda Continues"
+ ww1_usa.171.t:0 "Charles Evans Hughes Re-Elected as President!"
+ ww1_usa.171.d:0 "In a decisive victory, President Charles Evans Hughes has been reelected in the 1920 presidential election, defeating Democratic candidate James M. Cox. Hughes's first term has been marked by cautious leadership through the closing years of World War I and a steady focus on postwar recovery and international diplomacy. His administration has championed stability, business-friendly policies, and a careful approach to foreign entanglements. With this renewed mandate, Hughes is expected to continue his conservative, pro-business policies, focusing on economic growth, tariff adjustments, and limited government intervention. As he embarks on a second term, the nation looks forward to a continuation of Hughes's promise of steady governance."
+ ww1_usa.171.a:0 "A Suprising Re-Election"
+ ww1_usa.172.t:0 "John W. Davis Re-Elected as President"
+ ww1_usa.172.d:0 "President John W. Davis has been reelected in a close 1928 election, securing a second term over his Republican opponent, Herbert Hoover. Known for his conservative approach and commitment to limited government, Davis has spent his first term focusing on fiscal restraint, upholding traditional values, and fostering stability during a time of economic prosperity. His reelection reflects the public's trust in his steady leadership and preference for continuity over sweeping change. As he enters a second term, Davis is expected to continue his cautious approach to governance, prioritizing balanced budgets, states' rights, and maintaining the booming economy. With this victory, Davis reaffirms his commitment to guiding the country through a period of restrained yet prosperous growth."
+ ww1_usa.172.a:0 "Four More Years of Democratic Conservatism"
 
 #  ww1_usa.130.a: "Okay"
 #  ww1_usa.130.d: "Anti-American violence in the country of Haiti is threatening US business interests  especially considering that the local German community controls most of the Haitian industries., We must act quickly to preserve our economic dominance over Haiti."
