--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3767,10 +3767,10 @@
  ottoman_aleppo_vilayet_1027_yes:0 "\n§Y[1027.GetName]§!:[TUR_kurdish_population_1027]"
  ottoman_aleppo_vilayet_1029_yes:0 "\n§Y[1029.GetName]§!:[TUR_arab_population_1029][TUR_kurdish_population_1029]"
 
- TUR_deir_ez_zor_vilayet:0 "Deir ez-Zor Vilayet"
+ TUR_deir_ez_zor_vilayet:0 "Deir ez-Zor Sanjak"
  TUR_deir_ez_zor_vilayet_desc:0 "[TUR_deir_ez_zor_vilayet_desc]"
  TUR_deir_ez_zor_vilayet_desc_yes:0 "§W[ottoman_deir_ez_zor_vilayet_centralization_desc][ottoman_deir_ez_zor_vilayet_separatist_sentiments_desc]§!"
- ottoman_deir_ez_zor_vilayet_tt_blocked:0 "§YDeir ez-Zor Vilayet§![ottoman_deir_ez_zor_vilayet_centralization][ottoman_deir_ez_zor_vilayet_separatist_sentiments]"
+ ottoman_deir_ez_zor_vilayet_tt_blocked:0 "§YDeir ez-Zor Sanjak§![ottoman_deir_ez_zor_vilayet_centralization][ottoman_deir_ez_zor_vilayet_separatist_sentiments]"
  ottoman_deir_ez_zor_vilayet_centralization_yes:0 "\nCentralization: [?global.TUR_deir_ez_zor_centralization|Y0%]"
  ottoman_deir_ez_zor_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_deir_ez_zor_centralization|Y0%][ottoman_deir_ez_zor_vilayet_centralization_value]"
  ottoman_deir_ez_zor_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_deir_ez_zor_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_deir_ez_zor_vc_effect_3|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_deir_ez_zor_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_deir_ez_zor_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_deir_ez_zor_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_deir_ez_zor_vc_effect_3|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_deir_ez_zor_vc_effect|+%]"
@@ -6582,6 +6582,19 @@
  TUR_anti_imperialist_revanchist_struggle_revanchist_high_control:0 "High Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_medium_control:0 "Medium Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_low_control:0 "Low Revanchist Control"
+ TUR_government_committee_struggle:0 "Government-Committee Struggle"
+ TUR_government_committee_struggle_committee:0 "Union of Committee and Progress"
+ TUR_government_committee_struggle_committee_high_authority:0 "High Unionist Authority"
+ TUR_government_committee_struggle_committee_medium_authority:0 "Medium Unionist of Committee Authority"
+ TUR_government_committee_struggle_committee_low_authority:0 "Low Unionist of Committee Authority"
+ TUR_government_committee_struggle_government:0 "Sublime Porte"
+ TUR_government_committee_struggle_government_high_authority:0 "High Government Authority"
+ TUR_government_committee_struggle_government_medium_authority:0 "Medium Government Authority"
+ TUR_government_committee_struggle_government_low_authority:0 "Low Government Authority"
+ TUR_government_committee_struggle_mahmud_sevket:0 "Grand Vizier"
+ TUR_government_committee_struggle_mahmud_sevket_high_authority:0 "High Grand Vizier Authority"
+ TUR_government_committee_struggle_mahmud_sevket_medium_authority:0 "Medium Grand Vizier Authority"
+ TUR_government_committee_struggle_mahmud_sevket_low_authority:0 "Low Grand Vizier Authority"
  TUR_unionist_struggle:0 "Unionist Struggle"
  TUR_unionist_struggle_balanced:0 "Balanced Influence"
  TUR_unionist_struggle_talat_pasha:0 "Talat's Faction"
