--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6961,8 +6961,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_usa.93.a: "The party will keep Wilson's candidacy."
  ww1_usa.93.b: "James Hanly will preserve unity of the party."
  ww1_usa.94.t: "Election of [GetYear]"
- ww1_usa.94.d: "The day of the presidential election has arrived. Woodrow Wilson is preparing for another election again, despite his health. During his first term, he managed to create a strong political system, which is based on the cult of the president's personality. And if the party does not select a worthy successor in time, the opposition will try to destabilize situation in [USA.GetName]."
- ww1_usa.94.a: "There is no one more reliable than Wilson."
+ ww1_usa.94.d: "The day of the presidential election has arrived. Eugene W. Chafin is preparing for another election again. During his first term, he managed to create a strong political system, which is based on the cult of the president's personality. And if the party does not select a worthy successor in time, the opposition will try to destabilize situation in [USA.GetName]."
+ ww1_usa.94.a: "There is no one more reliable than Chafin."
  ww1_usa.94.b: "We need to demonstrate strength. Pershing is a good candidate."
  ww1_usa.95.t: "[USA.GetName] Ratifies Canada Act"
  ww1_usa.95.d: "[USA.GetName] seeks to expand the Monroe Doctrine. Congress passed the Canadian Colonial Independence Act. In fact, this is an ultimatum to the British - either they will grant Canada full independence, or [USA.GetNameDefCap] will begin military action."
