historical focuses and events + fixes

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2336,7 +2336,7 @@ FRA_you_can_change_the_prime_minister_later:0 "A §YDecision§! will remain avai
  ww1_france.512.t:0 "France Refused!"
  ww1_france.512.d:0 "The French government has ruled out the idea of ​​Tunisian independence, citing the Treaty of Bardo and French commitments intended to protect Africa. We're going to have to force their hand."
  ww1_france.512.a:0 "As expected..."
- TUN_can_revolt:0 "Tunisian Population Support a Coup"
+ TUN_can_revolt:0 "Tunisian population support a coup against French administration"
 
  ww1_france.513.t:0 "France Accepted!"
  ww1_france.513.d:0 "Contrary to what we had thought, the French government accepted the idea of ​​strategic independence for Tunisia. The two countries would remain close economic and military allies, but would now maintain interstate relations. This is a big surprise and a huge victory for our people."
@@ -2349,6 +2349,36 @@ FRA_you_can_change_the_prime_minister_later:0 "A §YDecision§! will remain avai
  ww1_france.515.t:0 "Tunisian Revolution"
  ww1_france.515.d:0 "Long before we anticipated it, independence forces struck in the heart of the country, in Tunis. The rebel troops seized the courts, the council and the residence of the current Bey Naceur who offered no resistance. There, the rebels named Naceur's son, Moncef, Bey of Tunis. Our scattered troops were not able to repel the attackers, especially since the population is clearly hostile to us. We were forced to retreat."
  ww1_france.515.a:0 "We cant let them go like this!"
+
+ ww1_france.516.t:0 "Nationalism in Tunisia"
+ ww1_france.516.d:0 "We established contact with Tunisian nationalist groups who came to Trablus to negotiate the passage of discreet cargo through our ports. There should be no mistake about the nature of such a request, it concerns weapons, a small quantity of rifles certainly intended for acts of resistance on Tunisian soil against the French occupier. The question remains whether such an operation is in our interest."
+ ww1_france.516.a:0 "They can pass"
+ ww1_france.516.b:0 "Of course not!"
+
+ ww1_france.517.t:0 "[448.OWNER.getName] Accepted!"
+ ww1_france.517.d:0 "[448.OWNER.getAdjective] have accepted that foreign help go through their territory. We can now negotiate our support!"
+ ww1_france.517.a:0 "Good"
+
+ ww1_france.518.t:0 "[448.OWNER.getName] Refused!"
+ ww1_france.518.d:0 "[448.OWNER.getAdjective] refused the commercial access, which means we cant call any sort of help."
+ ww1_france.518.a:0 "Damn..."
+
+ ww1_france.519.t:0 "Relief of French garrisons"
+ ww1_france.519.d:0 "With the occupation of Morocco, part of the occupation troops left for the Fez sector to fight the rebels there. This situation could give us greater room for maneuver, but also cause more crime in rural areas."
+ ww1_france.519.a:0 "Let's hope nothing serious happens here" 
+
+ ww1_france.520.t:0 "Lybian Refugees"
+ ww1_france.520.d:0 "With the war in western Libya, thousands of civilians have crossed the Tunisian border to avoid clashes. These many hungry men and women will be taken care of by the local administration, but this risks leading to an increase in delinquency."
+ ww1_france.520.a:0 "Islamic solidarity" 
+
+ ww1_france.521.t:0 "Boycott of Tunisian Trams"
+ ww1_france.521.d:0 "Tensions between the Italian and Tunisian communities are strong. Yesterday, a tram driven by an Italian hit and killed an 8-year-old Tunisian child. This was followed by the start of a boycott of the trams. The demands of the natives are as follows: Ban all Italians from the company and replace them exclusively with Tunisians."
+ ww1_france.521.a:0 "We cannot accept that." 
+ ww1_france.521.b:0 "We should avoid to anger the natives" 
+
+ ww1_france.522.t:0 "Italian Tunisian Riots"
+ ww1_france.522.d:0 "As a result of the government's action to ban Italians from tram companies, notably the CTT, many pro-Italian organizations and groups gathered in several large cities in the north of the country to demonstrate. The demonstrations often turned into riots and were followed by occasional and localized strikes."
+ ww1_france.522.a:0 "We couldn't piss off the native Tunisians" 
 
  #BELGIUM
  ww1_belgium.1.t: "Rape of Belgium"
