Bulgarian Prime Minister Trait

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3011,7 +3011,7 @@
  BUL_true_constitutional_monarchy:0 "True Constitutional Monarchy"
  BUL_true_constitutional_monarchy_desc:0 "Despite being merely a constitutional monarch, Ferdinand essentially did as he pleased. Now that he abdicated we can contain tsar's power."
  BUL_focus_liberalism:0 "Liberalism"
- BUL_focus_liberalism_desc:0 "For the elections, Radoslavists allied with the People's Liberal Party and the Young Liberals Party to form the Liberal Concentration, with the alliance emerging as the largest faction in the National Assembly and Vasil Radoslavov became Prime Minister for a second time."
+ BUL_focus_liberalism_desc:0 "For the elections, Radoslavists allied with the People's Liberal Party and the Young Liberals Party to form the Liberal Concentration, with the alliance emerging as the largest faction in the National Assembly and §YVasil Radoslavov§! became Prime Minister for a second time."
  BUL_russophobia:0 "Russophobia"
  BUL_russophobia_desc:0 ""
  BUL_privatisation:0 "Privatization"
