--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -49,7 +49,10 @@
  TUR_german_investment_libya:0 "Infrastructure Investment"
  eltsin_trait:0 "E.B.N."
  eltsin_trait_desc:0 "If the sea was vodka, he would become a submarine."
+
  foxy_ferdinand:0 "Foxy Ferdinand"
+ BUL_prime_minister:0 "§gPrime Minister§!"
+
  dislikes_russia:0 "Dislikes Russia"
  russophile:0 "Russophile"
  german_agent:0 "German Allegiances"
